# Purple_Agent

./: .env.example  .gitignore  Dockerfile  README.md  amber-manifest.json5  pyproject.toml
docs/: tau2-agent-spec.md
src/: agent.py  executor.py  messenger.py  server.py
src/prompts/: system.txt
tests/: conftest.py  test_agent.py
